--- a/our-page/main.css
+++ b/our-page/main.css
@@ -125,6 +125,20 @@ justify-content: space-between;
     border: 1px solid blue;
     border-radius: 10px;
     text-align: center;
-
 }
 /* Service styling end */
+/* about-me start */
+.about-me {
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+.about-me .about-content {
+    display: flex;
+    width: 100%;
+}
+.about-content .about-item {
+    width:50%;
+}
+
+
+/* about-me end  */
